<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:id="@+id/text_presart_person_label"
            android:text="@string/person"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/text_presart_person_data"
            android:text="Jacinto Lagos"
            android:textSize="19sp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBasicText"
            android:layout_toRightOf="@+id/text_presart_person_label"
            android:lines="2" />

        <TextView
            android:id="@+id/text_presart_date_label"
            android:text="@string/date"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignTop="@+id/text_presart_date_data"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/text_presart_date_data"
            android:text="27/05/16 3:15pm"
            android:textSize="19sp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBasicText"
            android:layout_below="@+id/text_presart_person_data"
            android:layout_toRightOf="@+id/text_presart_person_label" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        card_view:cardElevation="5dp"
        card_view:cardCornerRadius="7dp"
        card_view:cardUseCompatPadding="true"
        
        android:layout_width="match_parent"
        android:layout_height="150dp"
        card_view:cardPreventCornerOverlap="false"
        android:layout_marginTop="15dp">

        <TextView
            android:text="@string/systolic_pressure"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/text_presart_systolic_pressure"
            android:text="0"
            android:textSize="80sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBasicText" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        card_view:cardElevation="5dp"
        card_view:cardCornerRadius="7dp"
        card_view:cardUseCompatPadding="true"
        
        android:layout_width="match_parent"
        android:layout_height="150dp"
        card_view:cardPreventCornerOverlap="false">

        <TextView
            android:text="@string/diastolic_pressure"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/text_presart_diastolic_pressure"
            android:text="0"
            android:textSize="80sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBasicText" />

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button_presart_readtension"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/read_tension_meter"
        android:layout_gravity="center_horizontal" />

</LinearLayout>