<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:id="@+id/text_pruebaexh_person_label"
            android:text="@string/person"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/text_pruebaexh_person_data"
            android:text="Jacinto Lagos"
            android:textSize="19sp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBasicText"
            android:layout_toRightOf="@+id/text_pruebaexh_person_label"
            android:lines="2" />

        <TextView
            android:id="@+id/text_pruebaexh_date_label"
            android:text="@string/date"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/text_pruebaexh_person_data"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/text_pruebaexh_date_data"
            android:text="27/05/16 3:15pm"
            android:textSize="19sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBasicText"
            android:layout_below="@+id/text_pruebaexh_person_data"
            android:layout_alignLeft="@+id/text_pruebaexh_person_data"
            android:layout_alignStart="@+id/text_pruebaexh_person_data" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_pruebaexh_measurement"

        android:layout_height="300dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        card_view:cardElevation="5dp"
        card_view:cardCornerRadius="7dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardPreventCornerOverlap="false">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_airflow"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="7dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardPreventCornerOverlap="false"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/card_timeAirflow">

            <LinearLayout
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/time_in_test"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark" />

                <Chronometer
                    android:id="@+id/chrono_pruebaexh_timeintest"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBasicText"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/button_pruebaexh_initmeasure"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/init_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal" />

</LinearLayout>